# bjgen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: config.txt  example.html  result.html  style.css  test.xlsx
src/: main.cpp
